# retool-clonelists-metadata

./: .gitignore  pyproject.toml  readme.md
clonelists/: Apple - Macintosh (Redump).json  Arcade - Hasbro - VideoNow Color (Redump).json  Arcade - Konami - FireBeat (Redump).json  Arcade - Konami - M2 (Redump).json  Arcade - Konami - System 573 (Redump).json  Arcade - Namco - System 246 (Redump).json  Arcade - Sega - Lindbergh (Redump).json  Arcade - Sega - Naomi (Redump).json  Arcade - Sega - RingEdge (Redump).json  Arcade - Sega - RingEdge 2 (Redump).json  Atari - Atari 2600 (No-Intro).json  Atari - Atari 5200 (No-Intro).json  Atari - Atari 7800 (No-Intro).json  Atari - Atari Jaguar (No-Intro).json  Atari - Atari Lynx (No-Intro).json  Bandai - WonderSwan (No-Intro).json  Bandai - WonderSwan Color (No-Intro).json  Benesse - Pocket Challenge V2 (No-Intro).json  Benesse - Pocket Challenge W (No-Intro).json  Coleco - ColecoVision (No-Intro).json  Commodore - 64 (PP) (No-Intro).json  Commodore - Amiga (No-Intro).json  Commodore - Amiga CD (Redump).json  Commodore - Amiga CD32 (Redump).json  Fairchild - Channel F (No-Intro).json  Fujitsu - FM-Towns (Redump).json  GCE - Vectrex (No-Intro).json  GamePark - GP32 (No-Intro).json  Hitachi - S1 (No-Intro).json  IBM - PC and Compatibles (Digital) (Misc) (No-Intro).json  IBM - PC and Compatibles (Digital) (Updates and DLC) (No-Intro).json  IBM - PC and Compatibles (Flash Media) (No-Intro).json  IBM - PC and Compatibles (No-Intro).json  Magnavox - Odyssey 2 (No-Intro).json  Mattel - Intellivision (No-Intro).json  Microsoft - MSX (No-Intro).json  Microsoft - MSX2 (No-Intro).json  Microsoft - Xbox (Redump).json  Microsoft - Xbox - BIOS Images (DoM Version) (Redump).json  Microsoft - Xbox 360 (Redump).json  (+58 more)
config/: internal-config.json
metadata/: Acorn - Archimedes (Redump).json  Apple - II (No-Intro).json  Apple - Macintosh (Redump).json  Arcade - Hasbro - VideoNow (Redump).json  Arcade - Hasbro - VideoNow Color (Redump).json  Arcade - Hasbro - VideoNow Jr. (Redump).json  Arcade - Hasbro - VideoNow XP (Redump).json  Arcade - Konami - M2 (Redump).json  Arcade - Konami - System 573 (Redump).json  Arcade - Konami - System GV (Redump).json  Arcade - Konami - e-Amusement (Redump).json  Arcade - Namco - Sega - Nintendo - Triforce (Redump).json  Arcade - Namco - System 246 (Redump).json  Arcade - Sega - Chihiro (Redump).json  Arcade - Sega - Lindbergh (Redump).json  Arcade - Sega - Naomi (Redump).json  Arcade - Sega - Naomi 2 (Redump).json  Arcade - Sega - RingEdge (Redump).json  Arcade - Sega - RingEdge 2 (Redump).json  Atari - 8-bit Family (No-Intro).json  Atari - Atari 2600 (No-Intro).json  Atari - Atari 5200 (No-Intro).json  Atari - Atari Lynx (No-Intro).json  Atari - Jaguar CD (Redump).json  Bandai - Pippin (Redump).json  Bandai - Playdia Quick Interactive System (Redump).json  Bandai - WonderSwan Color (No-Intro).json  Blaze Entertainment - Evercade (No-Intro).json  Coleco - ColecoVision (No-Intro).json  Commodore - Amiga CD (Redump).json  Commodore - Amiga CD32 (Redump).json  Commodore - Amiga CDTV (Redump).json  Commodore - Commodore 64 (No-Intro).json  Enhanced CD (Redump).json  Fujitsu - FM-Towns (Redump).json  GCE - Vectrex (No-Intro).json  Google - Android (Amazon Appstore) (No-Intro).json  IBM - PC and Compatibles (Digital) (GOG) (No-Intro).json  (+180 more)
(+118 files in other folders)
