[project]
name = "retool-clone-list-metadata-helper"
description = "Validates, cleans, and gets Retool clone lists and metadata"
version="1.1"
requires-python = ">=3.10"
dependencies = [
    "json-source-map>=1.0.5",
    "jsonpath-ng>=1.7.0",
    "jsonschema>=4.25.1",
    "lxml>=5.4.0",
    "natsort>=8.4.0",
    "requests>=2.32.5",
]

[tool.setuptools]
py-modules = ["scripts"]

# Use UV for dependency installation
[tool.hatch.envs.default]
installer = "uv"
